--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
+/*** IMPORTs ***/
+/** FONTS **/
+/* Bebas Neue */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+/* Open Sans */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 :root
 {
     --greenCheck: #2ecc71;
     --redError: #e74c3c;
+    --fuentePrimaria: 'Bebas Neue', cursive;
+    --fuenteSecundaria: 'Open Sans', sans-serif;
 }
 html {
     box-sizing: border-box;
@@ -64,6 +72,7 @@ div.header
 div.header h2
 {
     margin: 0;
+    font-family: var(--fuentePrimaria);
 }
 
 /** FORM **/
@@ -81,6 +90,8 @@ div.form-control label
 {
     display: inline-block;
     margin-bottom: 5px;
+    font-weight: 600;
+    font-family: var(--fuenteSecundaria);
 }
 div.form-control input
 {
@@ -91,6 +102,7 @@ div.form-control input
     font-size: 14px;
     padding: 10px;
     width: 100%;
+    font-family: var(--fuenteSecundaria);
 }
 div.form-control.success input
 {
@@ -138,5 +150,10 @@ form.form button
     width: 100%;
     padding: 10px;
     font-size: 16px;
-    font-family: inherit;
+    font-family: var(--fuentePrimaria);
+    transition: all .25s ease;
+}
+form.form button:hover{
+    background-color: transparent;
+    color: #8e44ad;
 }
